--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Contenido</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="ProgramaciónDeAppsConSockets.html">Programación de
+              <li><i class="bx bx-chevron-right"></i> <a href="content/Sockets/ProgramacionDeAppsConSockets.html">Programación de
                   Aplicaciones con Sockets</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="SeguridadEnLaComunicaciónDeDatos.html">Seguridad en la
                   Comunicación de Datos en una Red</a></li>
