--- a/content/Sockets/TiposDeSockets.html
+++ b/content/Sockets/TiposDeSockets.html
@@ -55,17 +55,17 @@
                                     <li><a href="ProgramacionDeAppsConSockets.html">Programación de
                                             Aplicaciones</a></li>
                                     <li><a href="TiposDeSockets.html">Tipos de Sockets</a></li>
-                                    <li><a href="Sockets/VideoSockets.html">Video</a></li>
+                                    <li><a href="VideoSockets.html">Video</a></li>
                                 </ul>
                             </li>
 
                             <li class="dropdown"><a
-                                    href="../SeguridadComunicacion/SeguridadEnLaComunicaciónDeDatos.html"><span>Seguridad
+                                    href="../SeguridadComunicacion/VPN.html"><span>Seguridad
                                         en la Comunicación...</span> <i class="bi bi-chevron-down"></i></a>
                                 <ul>
-                                    <li><a href="#">IPSec</a></li>
-                                    <li><a href="#">VPN</a></li>
-                                    <li><a href="#">Video</a></li>
+                                    <li><a href="../SeguridadComunicacion/VPN.html">VPN</a></li>
+                                    <li><a href="../SeguridadComunicacion/IPSec.html">IPSec</a></li>
+                                    <li><a href="../SeguridadComunicacion/SeguridadComunicacionesVideo.html">Video</a></li>
                                 </ul>
                             </li>
 
