--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                 </ul>
               </li>
 
-              <li class="dropdown"><a href="content/SeguridadComunicacion/SeguridadEnLaComunicaciónDeDatos.html"><span>» Seguridad en la Comunicación...</span> <i class="bi bi-chevron-down"></i></a>
+              <li class="dropdown"><a href="content/SeguridadComunicacion/VPN.html"><span>» Seguridad en la Comunicación...</span> <i class="bi bi-chevron-down"></i></a>
                 <ul>
-                  <li><a href="#">IPSec</a></li>
-                  <li><a href="#">VPN</a></li>
-                  <li><a href="#">Video</a></li>
+                  <li><a href="content/SeguridadComunicacion/VPN.html">VPN</a></li>
+                  <li><a href="content/SeguridadComunicacion/IPSec.html">IPSec</a></li>
+                  <li><a href="content/SeguridadComunicacion/SeguridadComunicacionesVideo.html">Video</a></li>
                 </ul>
               </li>
 
@@ -105,7 +105,8 @@
             <div class="icon"><i class="ri-stack-line"></i></div>
             <h4 class="title"><a href="content/Sockets/ProgramacionDeAppsConSockets.html">Programación de Aplicaciones con Sockets</a>
             </h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+            <p class="description">Un socket es conocido como un tipo de software que actúa como un
+              punto final que funciona estableciendo un enlace de comunicación de red [...] </p>
             <a href="content/Sockets/ProgramacionDeAppsConSockets.html" class="continue-btn">Continuar Leyendo <i
                 class="ri-arrow-right-circle-fill"></i> </a>
           </div>
@@ -114,10 +115,11 @@
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="300">
           <div class="icon-box">
             <div class="icon"><i class="ri-lock-2-fill"></i></div>
-            <h4 class="title"><a href="SeguridadEnLaComunicacionDeDatos.html">Seguridad en la Comunicación de Datos en
+            <h4 class="title"><a href="content/SeguridadComunicacion/VPN.html">Seguridad en la Comunicación de Datos en
                 una Red</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
-            <a href="SeguridadEnLaComunicaciónDeDatos.html" class="continue-btn">Continuar Leyendo <i
+            <p class="description">Una VPN son las siglas de <b>«Virtual Private Network»</b>, o
+              también conocida como red privada virtual, y es una tecnología de red que [...]</p>
+            <a href="content/SeguridadComunicacion/VPN.html" class="continue-btn">Continuar Leyendo <i
                 class="ri-arrow-right-circle-fill"></i> </a>
           </div>
         </div>
@@ -125,9 +127,9 @@
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="400">
           <div class="icon-box">
             <div class="icon"><i class="ri-git-repository-private-fill"></i></div>
-            <h4 class="title"><a href="SeguridadEnLaWeb.html">Seguridad en la Web</a></h4>
+            <h4 class="title"><a href="content/SeguridadWeb/SeguridadEnLaWeb.html">Seguridad en la Web</a></h4>
             <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
-            <a href="SeguridadEnLaWeb.html" class="continue-btn">Continuar Leyendo <i
+            <a href="content/SeguridadWeb/SeguridadEnLaWeb.html" class="continue-btn">Continuar Leyendo <i
                 class="ri-arrow-right-circle-fill"></i> </a>
           </div>
         </div>
@@ -135,9 +137,9 @@
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="500">
           <div class="icon-box">
             <div class="icon"><i class="ri-global-fill"></i></div>
-            <h4 class="title"><a href="InternetDeLasCosas.html">Internet de las Cosas</a></h4>
+            <h4 class="title"><a href="content/InternetCosas/InternetDeLasCosas.html">Internet de las Cosas</a></h4>
             <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
-            <a href="InternetDeLasCosas.html" class="continue-btn">Continuar Leyendo <i
+            <a href="content/InternetCosas/InternetDeLasCosas.html" class="continue-btn">Continuar Leyendo <i
                 class="ri-arrow-right-circle-fill"></i> </a>
           </div>
         </div>
@@ -324,10 +326,10 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="content/Sockets/ProgramacionDeAppsConSockets.html">Programación de
                   Aplicaciones con Sockets</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="SeguridadEnLaComunicaciónDeDatos.html">Seguridad en la
+              <li><i class="bx bx-chevron-right"></i> <a href="content/SeguridadComunicacion/VPN.html">Seguridad en la
                   Comunicación de Datos en una Red</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="SeguridadEnLaWeb.html">Seguridad en la Web</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="InternetDeLasCosas.html">Internet de las Cosas</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="content/SeguridadWeb/SeguridadEnLaWeb.html">Seguridad en la Web</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="content/InternetCosas/">Internet de las Cosas</a></li>
             </ul>
           </div>
 
