--- a/content/Sockets/VideoSockets.html
+++ b/content/Sockets/VideoSockets.html
@@ -60,12 +60,12 @@
                             </li>
 
                             <li class="dropdown"><a
-                                    href="../SeguridadComunicacion/SeguridadEnLaComunicaciónDeDatos.html"><span>»
+                                    href="../SeguridadComunicacion/VPN.html"><span>»
                                         Seguridad en la Comunicación...</span> <i class="bi bi-chevron-down"></i></a>
                                 <ul>
-                                    <li><a href="#">IPSec</a></li>
-                                    <li><a href="#">VPN</a></li>
-                                    <li><a href="#">Video</a></li>
+                                    <li><a href="../SeguridadComunicacion/VPN.html">VPN</a></li>
+                                    <li><a href="../SeguridadComunicacion/IPSec.html">IPSec</a></li>
+                                    <li><a href="../SeguridadComunicacion/SeguridadComunicacionesVideo.html">Video</a></li>
                                 </ul>
                             </li>
 
